--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
 <div id="gui_stats" style="position: relative; width: 175px; height: 434px; float: left;">
 <img usemap="#statmap" src="./images/statbar_all.png">
 <map id="statmap" name="statmap">
-<area coords="127,107,163,143" id="btn_strength">
-<area coords="127,169,163,203" id="btn_dexterity">
-<area coords="127,231,163,267" id="btn_vitality">
-<area coords="127,293,163,329" id="btn_energy">
-<area coords="14,15,61,52" id="btn_level" onclick="levelup(1)" oncontextmenu="levelup(-1)">
+<area shape="poly" coords="127,107,163,143" id="btn_strength">
+<area shape="poly" coords="127,169,163,203" id="btn_dexterity">
+<area shape="poly" coords="127,231,163,267" id="btn_vitality">
+<area shape="poly" coords="127,293,163,329" id="btn_energy">
+<area shape="poly" coords="14,15,61,52" id="btn_level" onclick="levelup(1)" oncontextmenu="levelup(-1)">
 </map>
 <p class="point" style="left: 23px; top: 12px;" id="level" onclick="levelup(1)" oncontextmenu="levelup(-1)"></p>
 <p class="text" style="left: 67px; top: 12px;" id="class_name"></p>
