cross-browser style adjustment

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 <img class="I Ic1 Iy6" id="i361"><img class="I Ic2 Iy6" id="i362"><img class="I Ic3 Iy6" id="i363">
 
 <!--	Equipment Menus 	-->
-<div id="equipment" style="display: block; float: right; width: 200px; height: 300px; position: relative;">
+<div class="dropdown" id="equipment" style="display: block; float: right; width: 200px; height: 300px; position: relative;">
 <select class="dropdown" id="dropdown_helm" onChange="equip('helm', this.value)"></select>
 <select class="dropdown" id="dropdown_armor" onChange="equip('armor', this.value)"></select>
 <select class="dropdown" id="dropdown_gloves" onChange="equip('gloves', this.value)"></select>
