added support for set item bonuses

--- a/index.html
+++ b/index.html
@@ -129,16 +129,16 @@
 
 <!--	Equipment Menus 	-->
 <div class="dropdown" id="equipment" style="display: block; float: right; width: 200px; height: 300px; position: relative;">
-<select class="dropdown" id="dropdown_helm" onChange="equip('helm', this.value)"></select>
-<select class="dropdown" id="dropdown_armor" onChange="equip('armor', this.value)"></select>
-<select class="dropdown" id="dropdown_gloves" onChange="equip('gloves', this.value)"></select>
-<select class="dropdown" id="dropdown_boots" onChange="equip('boots', this.value)"></select>
-<select class="dropdown" id="dropdown_belt" onChange="equip('belt', this.value)"></select>
-<select class="dropdown" id="dropdown_amulet" onChange="equip('amulet', this.value)"></select>
-<select class="dropdown" id="dropdown_ring1" onChange="equip('ring1', this.value)"></select>
-<select class="dropdown" id="dropdown_ring2" onChange="equip('ring2', this.value)"></select>
-<select class="dropdown" id="dropdown_weapon" onChange="equip('weapon', this.value)"></select>
-<select class="dropdown" id="dropdown_offhand" onChange="equip('offhand', this.value)"></select>
+<select class="dropdown" id="dropdown_helm" onChange="equip('helm', this.value)" onContextMenu="equip('helm', 'helm')"></select>
+<select class="dropdown" id="dropdown_armor" onChange="equip('armor', this.value)" onContextMenu="equip('armor', 'armor')"></select>
+<select class="dropdown" id="dropdown_gloves" onChange="equip('gloves', this.value)" onContextMenu="equip('gloves', 'gloves')"></select>
+<select class="dropdown" id="dropdown_boots" onChange="equip('boots', this.value)" onContextMenu="equip('boots', 'boots')"></select>
+<select class="dropdown" id="dropdown_belt" onChange="equip('belt', this.value)" onContextMenu="equip('belt', 'belt')"></select>
+<select class="dropdown" id="dropdown_amulet" onChange="equip('amulet', this.value)" onContextMenu="equip('amulet', 'amulet')"></select>
+<select class="dropdown" id="dropdown_ring1" onChange="equip('ring1', this.value)" onContextMenu="equip('ring1', 'ring1')"></select>
+<select class="dropdown" id="dropdown_ring2" onChange="equip('ring2', this.value)" onContextMenu="equip('ring2', 'ring2')"></select>
+<select class="dropdown" id="dropdown_weapon" onChange="equip('weapon', this.value)" onContextMenu="equip('weapon', 'weapon')"></select>
+<select class="dropdown" id="dropdown_offhand" onChange="equip('offhand', this.value)" onContextMenu="equip('offhand', 'offhand')"></select>
 <select class="dropdown" id="dropdown_charms" onChange="addCharm(this.value)"></select>
 </div>
 
