--- a/index.html
+++ b/index.html
@@ -186,14 +186,19 @@
 
 </div>		<!--	/gui	-->
 
-<div style="display: block; height:118px; width: 650px; position: relative;">
-<div class="gray no-selection" style="display: block; width: 250px;" id="stats">
+<div class="no-selection" style="display: block; height:118px; width: 650px; position: relative;">
+<div class="gray" style="display: block; width: 250px;" id="stats">
 	<a>Basic Attack: </a><a id="basic_attack"></a><br>
 	<a>Attack Rating: </a><a id="ar"></a><br>
 	<a>Defense: </a><a id="defense"></a><br>
 	<a>Stamina: </a><a id="stamina"></a><br>
 	<a>Life: </a><a id="life"></a><br>
 	<a>Mana: </a><a id="mana"></a>
+</div>
+<div class="gray" style="position: absolute; top: 0px; left: 170px;">
+<a style="opacity:0;">Damage: </a><a id="damage"></a><br>
+<a style="opacity:0;">Chance to Hit: </a><a id="hit"></a><br>
+<a style="opacity:0;">Block Chance: </a><a id="block"></a>
 </div>
 <div class="gray" style="position: absolute; top: 0px; left: 320px;">
 <a id="skill1"></a><br>
@@ -339,6 +344,8 @@
 </div>		<!--	/interface	-->
 
 </div>		<!--	/main	-->
+
+<a style="color: #cacaca; z-index:9; position:relative; float:left; width:869px; height:30px; text-align:center;" href="https://github.com/Moreina/planner#planner">development page & feedback</a>
 
 </body>
 
