--- a/index.html
+++ b/index.html
@@ -345,7 +345,9 @@
 
 </div>		<!--	/main	-->
 
-<a style="color: #cacaca; z-index:9; position:relative; float:left; width:869px; height:30px; text-align:center;" href="https://github.com/Moreina/planner#planner">development page & feedback</a>
+<div style="position:relative; width: 1500px; float: left;">
+<a style="display: block; color: #cacaca; z-index:9; width:869px; height: 25px; position:absolute; text-align:center;" href="https://github.com/Moreina/planner#planner">development page & feedback</a>
+</div>
 
 </body>
 
