added item base info (defense & damage)
Enhanced damage/defense should be much easier to calculate with this info

The info will also be necessary for any custom item creation/modification in the future

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 	<font size="2">+ Cold Damage: </font><font size="2" id="cdamage"></font><br>
 	<font size="2">+ Lightning Damage: </font><font size="2" id="ldamage"></font><br>
 	<font size="2">+ Poison Damage: </font><font size="2" id="pdamage"></font><br><br>
-	<font size="2">Magic Find: </font><font size="2" id="mf"></font><br>
+	<font size="2">Magic Find: </font><font size="2" id="mf"></font>
 </div>
 <div class="gray" style="position: relative; display: block; float: left;" id="stats2b">
 	<font size="2">Fire Absorb: </font><font size="2" id="fabsorb"></font><br>
@@ -246,7 +246,7 @@
 	<font size="2">Cold Pierce: </font><font size="2" id="cpierce"></font><br>
 	<font size="2">Lightning Pierce: </font><font size="2" id="lpierce"></font><br>
 	<font size="2">Poison Pierce: </font><font size="2" id="ppierce"></font><br><br>
-	<font size="2">Gold Find: </font><font size="2" id="gf"></font><br>
+	<font size="2">Gold Find: </font><font size="2" id="gf"></font>
 </div>
 </div>
 </div>
@@ -341,12 +341,14 @@
 
 <div id="charm_loader"></div>
 
+<div style="position:relative; width: 869px; float: left;">
+<a style="display: block; color: #bbbbbb; z-index:9; width:869px; height: 25px; position:absolute; text-align:center;" href="https://github.com/Moreina/planner#planner">development page & feedback</a>
+</div>
+
 </div>		<!--	/interface	-->
 
 </div>		<!--	/main	-->
 
-<div style="position:relative; width: 1500px; float: left;">
-<a style="display: block; color: #cacaca; z-index:9; width:869px; height: 25px; position:absolute; text-align:center;" href="https://github.com/Moreina/planner#planner">development page & feedback</a>
 </div>
 
 </body>
