little changes to prepare for showing skill dps

--- a/index.html
+++ b/index.html
@@ -196,9 +196,9 @@
 	<a>Mana: </a><a id="mana"></a>
 </div>
 <div class="gray" style="position: absolute; top: 0px; left: 170px;">
-<a style="opacity:0;">Damage: </a><a id="damage"></a><br>
-<a style="opacity:0;">Chance to Hit: </a><a id="hit"></a><br>
-<a style="opacity:0;">Block Chance: </a><a id="block"></a>
+<!--<a style="visibility:visible;">Damage per Second: </a><a id="dps"></a><br>-->
+<!--<a style="visibility:visible;">Chance to Hit: </a><a id="hit"></a><br>-->
+<a style="visibility:visible;">Block Chance: </a><a id="block"></a>
 </div>
 <div class="gray" style="position: absolute; top: 0px; left: 320px;">
 <a id="skill1"></a><br>
