added more uniques

--- a/index.html
+++ b/index.html
@@ -165,11 +165,15 @@
 
 <!--	selection options	-->
 <div style="width: 869px; margin-bottom: 40px;">
-<div style="margin-right: 240px; width: 160px; float: right;">
+<div style="margin-right: 230px; width: 210px; float: right;">
+<div>
 <input id="coupling" type="checkbox" name="coupling" value="1" onclick="return toggleCoupling(this);" checked>
 <label style="color: #aaa;" for="coupling">Skill-Level Coupling</label>
+</div>
+<div>
 <input id="autocast" type="checkbox" name="autocast" value="1" onclick="return toggleAutocast(this);" checked>
-<label style="color: #aaa;" for="autocast">Autocast Buffs</label>
+<label style="color: #aaa;" for="autocast">New Effects Begin Enabled</label>
+</div>
 </div>
 <div style="width: 350px;">
 <div style="margin-left: 12px; margin-bottom: 1px; width: 200px">
@@ -350,7 +354,7 @@
 <div id="charm_loader"></div>
 
 <div style="position:relative; width: 869px; float: left;">
-<a style="display: block; color: #bbbbbb; z-index:9; width:869px; height: 25px; position:absolute; text-align:center;" href="https://github.com/Moreina/planner#planner">development page & feedback</a>
+<a style="display: block; color: #bbbbbb; z-index:9; width:869px; height: 25px; position:absolute; text-align:center;" href="https://github.com/Moreina/planner#planner">development plans & feedback</a>
 </div>
 
 </div>		<!--	/interface	-->
